resolved the comments in EventServiceImpl