@@ -9,6 +9,7 @@ import com.example.campuspulseai.domain.dto.response.GetEventResponse;
 import com.example.campuspulseai.domain.dto.response.GetUserResponse;
 import com.example.campuspulseai.service.IEventService;
 import com.example.campuspulseai.southbound.entity.*;
+import com.example.campuspulseai.southbound.mapper.UserEventMapper;
 import com.example.campuspulseai.southbound.mapper.UserMapper;
 import com.example.campuspulseai.southbound.repository.*;
 import lombok.SneakyThrows;
@@ -44,6 +45,10 @@ public class EventServiceImpl implements IEventService {
     private final EventMapper eventMapper;
     private final EventSpecifications eventSpecifications;
     private final UserMapper userMapper;
+    private final UserEventMapper userEventMapper;
+    private static final String EVENT_NOT_FOUND = "Event not found with id: ";
+
+
 
     @SneakyThrows
     @Override
@@ -144,14 +149,16 @@ public class EventServiceImpl implements IEventService {
     public void attendEvent(Long eventId) {
         User user = authUtils.getAuthenticatedUser();
         Event event = eventRepository.findById(eventId)
-                .orElseThrow(() -> new RuntimeException("Event not found with id: " + eventId));
+                .orElseThrow(() -> new ResourceNotFoundException(EVENT_NOT_FOUND + eventId));
+        if (event.getTotalAttendees() >= event.getCapacity()) {
+            throw new RuntimeException("Event is full. Cannot RSVP.");
+        }
+        boolean alreadyAttending = userEventRepository.existsByUserIdAndEventId(user.getId(), eventId);
+        if (alreadyAttending) {
+            throw new RuntimeException("User already RSVP’d to this event.");
+        }
 
-        UserEvent userEvent = new UserEvent();
-        userEvent.setUserId(user.getId());
-        userEvent.setEventId(eventId);
-        userEvent.setUser(user);
-        userEvent.setEvent(event);
-        userEvent.setRsvpDateTime(LocalDateTime.now());
+        UserEvent userEvent = userEventMapper.toUserEvent(user, event);
         event.setTotalAttendees(event.getTotalAttendees() + 1);
         userEventRepository.save(userEvent);
     }
@@ -161,7 +168,7 @@ public class EventServiceImpl implements IEventService {
     public void unattendEvent(Long eventId) {
         User user = authUtils.getAuthenticatedUser();
         Event event = eventRepository.findById(eventId)
-                .orElseThrow(() -> new RuntimeException("Event not found with id: " + eventId));
+                .orElseThrow(() -> new ResourceNotFoundException(EVENT_NOT_FOUND + eventId));
         UserEventId id = new UserEventId(user.getId(), eventId);
         userEventRepository.deleteById(id);
         event.setTotalAttendees(event.getTotalAttendees() - 1);
@@ -198,8 +205,9 @@ public class EventServiceImpl implements IEventService {
                     boolean isUserAttending = userEventRepository.existsById(new UserEventId(user.getId(), event.getId()));
                     return eventMapper.mapToEventResponseDetails(event, isUserAttending);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
+
 
 
     @SneakyThrows
@@ -217,7 +225,7 @@ public class EventServiceImpl implements IEventService {
     // Helper
     private Event getEventFromDBById(Long id) {
         return eventRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Event not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(EVENT_NOT_FOUND + id));
     }
 
     private void validateUserClubOwnership(User user, Club club) {
